--- a/src/app/views/auth/signup.njk
+++ b/src/app/views/auth/signup.njk
@@ -1,5 +1,33 @@
 {% extends "_layout/auth.njk" %}
 
 {% block body %}
-<h1>Hello world</h1>
+<form action="/signup" method="POST" enctype="multipart/form-data">
+  <label for="avatar">
+    <img src="/images/avatar.svg" alt="" />
+  </label>
+
+  <input type="file" name="avatar" id="avatar">
+  <input type="text" name="name" placeholder="Nome completo">
+  <input type="email" name="email" placeholder="Seu e-mail">
+  <input type="password" name="password" placeholder="Senha secreta">
+
+  <label for="provider">
+    <input type="checkbox" name="provider" id="provider" value="1">
+    Sou cabelereiro
+  </label>
+
+  <button type="submit">Criar conta</button>
+
+  <a href="/">Já possuo conta</a>
+</form>
+
+<script>
+var avatarInput = document.getElementById('avatar');
+var img = document.querySelector('label[for=avatar] img');
+
+avatar.onchange = function(e){
+  img.classList.add('preview');
+  img.src = URL.createObjectURL(e.target.files[0]);
+}
+</script>
 {% endblock %}
